<resources>
    <string name="app_name">EasyDzongkhaApp</string>
    <string name="opennavdrawer">Open Navigation Drawer</string>
    <string name="closenavdrawer">Close Navigation Drawer</string>
    <string name="cat1">མཐུན་སྒྲིག།</string>
    <string name="cat2">ཡིག་སྡེབ་བསྒྲིག་ནི།</string>
    <string name="cat3">ཡིག་སྡེབ་བྲི་ནི།</string>
    <string name="cat4">ཨང་རྩིག་རིག་པ།</string>
    <string name="share">རིམ་ལུགས་སྤེལ།</string>
    <string name="rate">སྐུགས་བྱིན།</string>
    <string name="feedback">བསམ་འཆར།</string>
    <string name="about">རིམ་ལུགས་ཀྱི་སྐོར།</string>
    <string name="exit">སྡམས།</string>
    <string name="number">ཨང</string>
    <string name="add">བསྡོམས་རྩིས</string>
    <string name="subtract">ཕབ་རྩིས</string>
    <string name="multiply">སྒྱུར་རྩིས</string>
    <string name="divide">བགོ་རྩིས</string>
    <string name="developer">
        འགྲུལ་འཕྲིན་རིམ་ལུགས་འདི་གིས་ མཐུན་སྒྲིག་ ཡིག་སྡེབ་བསྒྲིག་ནི་ ཡིག་སྡེབ་བྲི་ནི་དང་ཨང་རྩིག་རིག་པ་ཚུ་ དབྱེ་ཁག་བཞི་ནང་བགོ་ཡོད། རིམ་ལུགས་འདི་གི་ རྫོང་ཁ་ཡར་རྒྱས་བཏང་ནི་ལུ་ཕན་ཐོག།
    </string>
    <string name="collegedetials">
        རྒྱལ་པོའི་ཞིང་བརྡ་དོན་འཕྲུལ་རིགས་མཐོ་རིམ་སློབ་གྲྭ།\n
        ༡༽ བསོན་ནམས་ ཆོས་སྐྱིད། \n
        (Chokisonam101@gmail.com) \n
        ༢༽ བསོན་ནམས་ དོན་གྲུབ།\n
        (sdendup2017@gmail.com) \n
        ༣༽ འཕྲིན་ལས་ དབང་མོ། \n
        (wthrinley@gmail.com) \n
        ༤༽ ཚེ་རིང་ དབང་ཕྱུག། \n
        (humblewangs777@gmail.com)
    </string>
    <string name="developerdetial">

    </string>

</resources>