<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/ic_share"/>
    <item
        android:id="@+id/rate"
        android:title="@string/rate"
        android:icon="@drawable/ic_rate"/>
    <item
        android:id="@+id/feedback"
        android:title="@string/feedback"
        android:icon="@drawable/ic_feedback"/>
</group>

<group android:checkableBehavior="single">
    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:icon="@drawable/ic_about"/>
    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        android:icon="@drawable/ic_exit"/>

</group>
</menu>