<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Math"

    android:background="@drawable/matchlevebackgrd"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp">

        <ImageButton
            android:layout_width="150dp"
            android:scaleType="fitXY"
            android:layout_height="150dp"
            android:src="@drawable/numbers"
            tools:ignore="MissingConstraints" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:layout_marginLeft="60dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:src="@drawable/addition"
            tools:ignore="MissingConstraints"
            android:onClick="sub_Addition"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_marginLeft="30dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:src="@drawable/subtraction"
        tools:ignore="MissingConstraints" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtract"
            android:layout_marginLeft="60dp"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="40dp">

        <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        tools:ignore="MissingConstraints"
        android:src="@drawable/multiple1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply"
            android:layout_marginLeft="60dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        tools:ignore="MissingConstraints"
        android:src="@drawable/division"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            android:layout_marginLeft="60dp"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>